[package]
name = "rocket-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
google = ["jwt", "openssl", "reqwest"]
tera = ["rocket_dyn_templates", "rocket_dyn_templates/tera"]
#handlebars = ["rocket_dyn_templates", "rocket_dyn_templates/handlebars"]

[dependencies]
log = { version = "^0.4", features = ["std"] }
rocket = { version = "0.5.0-rc.1", features = ["secrets"], default-features = false, path = "../Rocket/core/lib/" }
rocket_dyn_templates = { version = "0.1.0-rc.1", default-features = false, optional = true, path = "../Rocket/contrib/dyn_templates/" }
serde = { version = "^1.0", features = ["derive"], default-features = false }
diesel = { version = "^1.4", default-features = false, optional = true }
sqlx = { version = "*", default-features = false, optional = true, features = ["runtime-tokio-rustls"] }
rand = "^0.8.5"
sha2 = "^0.10.2"
flurry = "^0.4.0"
chrono = "^0.4.19"
jwt = { version = "^0.16.0", features = ["openssl"], optional = true }
openssl = { version = "^0.10.38", optional = true }
reqwest = { version = "^0.11.10", features = ["json"], optional = true }
